# AndroidRustDemo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/angcyo/android/rust/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/angcyo/android/rust/demo/: MainActivity.kt  Rust.kt
app/src/main/res/layout/: main_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/angcyo/android/rust/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  rust.gradle
rust/src/: lib.rs
